Fase3/FilmStars/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filmstars-ingress
  namespace: filmstars
spec:
  ingressClassName: traefik
  rules:
    - host: filmstars.${K3S_IP}.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
